<resources>
    <string name="app_name">Motivation</string>

    <string name="title_activity_splash_screen">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="salvar">Salvar</string>
    <string name="happy">happy</string>
    <string name="sun">sun</string>
    <string name="all">all</string>
    <string name="phrase">Phrase</string>
    <string name="nova_frase">Nova frase</string>
    <string name="usu_rio">Usuário</string>
    <string name="informe_nome">Por favor informe seu nome</string>
</resources>
