<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:id="@+id/linearMenuFilter"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageAll"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/all"
            android:src="@drawable/ic_all_unselected" />

        <ImageView
            android:id="@+id/imageSun"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/sun"
            android:src="@drawable/ic_sun_unselected" />

        <ImageView
            android:id="@+id/imageHappy"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/happy"
            android:src="@drawable/ic_happy_unselected" />

    </LinearLayout>

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usu_rio"
        app:layout_constraintTop_toBottomOf="@+id/linearMenuFilter"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phrase"
        app:layout_constraintTop_toBottomOf="@+id/textUserName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonNewPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nova_frase"
        app:layout_constraintTop_toBottomOf="@id/textPhrase"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>